--- a/style_3.css
+++ b/style_3.css
@@ -7,6 +7,7 @@
     background-color: aqua;
     flex-direction: row;
     /* flex-wrap: wrap; */
+    justify-content: center;
 }
 .item{
     background: orange;
@@ -17,13 +18,13 @@
     text-align: center;
     border-radius: 10px;
 }
-.item-1{
+/* .item-1{
     flex-basis: 10;
 }
 .item-2{
-    /* flex-basis: 10rem; */
+    
     flex-shrink: 10; 
 }
 .item-3{
     flex-grow: 10;
-}
+} */
